Avoid scroll overlap with fixed footer
+ Added a main wrapper around page content
+ Padding on main wrapper to avoid blocked content from fixed footer

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,7 @@
+main {
+    padding-bottom: 100px; /* height of footer + extra padding */
+}
+
 .main {
     margin: 0;
 }
@@ -44,4 +48,3 @@ footer {
 .flink {
     padding-right: 10px;
 }
-
